syntax = "proto3";

package user.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UserService {
    rpc SayHello(HelloRequest) returns (HelloResponse);

    rpc CreateProfile(CreateProfileRequest) returns (Profile);
    rpc DeleteProfile(DeleteProfileRequest) returns (google.protobuf.Empty);
    rpc GetProfile(GetProfileRequest) returns (Profile);
    rpc UpdateProfile(UpdateProfileRequest) returns (Profile);

    rpc RemoveProfilePicture(google.protobuf.Empty) returns (Profile);

    rpc UpdateTheme(UpdateThemeRequest) returns (Profile);

    rpc AssignRole(RoleRequest) returns (Profile);
    rpc RemoveRole(RoleRequest) returns (Profile);
    rpc LeaveRole(LeaveRoleRequest) returns (Profile);

    rpc ListAvailablePermissions(google.protobuf.Empty) returns (PermissionList);
    rpc CreateRoleRequest(RoleChangeRequest) returns (RoleRequestStatus);
    rpc ListPendingRoleRequests(google.protobuf.Empty) returns (RoleRequestsList);
    rpc ListAllRoleRequests(google.protobuf.Empty) returns (RoleRequestsList);
    rpc ListMyRoleRequests(google.protobuf.Empty) returns (RoleRequestsList);
    rpc CancelRoleRequest(CancelRoleRequestRequest) returns (RoleRequestStatus);
    rpc ReviewRoleRequest(ReviewRequest) returns (Profile);
    rpc UploadProfilePicture(UploadProfilePictureRequest) returns (Profile);

    rpc TouchPresence(google.protobuf.Empty) returns (Presence);
    rpc SendFriendRequest(FriendTargetRequest) returns (Friendship);
    rpc AcceptFriendRequest(FriendTargetRequest) returns (Friendship);
    rpc RemoveFriend(FriendTargetRequest) returns (google.protobuf.Empty);
    rpc ListFriends(google.protobuf.Empty) returns (FriendList);
}

message Profile {
    string id = 1;
    optional string profile_picture_url = 2;
    repeated string roles = 3;
    repeated string permissions = 4;
    Theme theme = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    bool is_online = 8;
    optional google.protobuf.Timestamp last_seen_at = 9;
}

message Theme {
    bool is_preset = 1;
    string name = 2;
    map<string, string> colors = 3;
    string font_main = 4;
    string font_display = 5;
}

message CreateProfileRequest {
    string id = 1;
}

message DeleteProfileRequest {
    string id = 1;
}

message GetProfileRequest {
    string id = 1;
}

message UpdateProfileRequest {
    string id = 1;
    optional string profile_picture_url = 2;
}

message UpdateThemeRequest {
    string id = 1;
    Theme theme = 2;
}

message RoleRequest {
    string id = 1;
    string role_name = 2;
}

message LeaveRoleRequest {
    string role_name = 1;
}

message PermissionList {
    repeated string permissions = 1;
}

message RoleChangeRequest {
    string id = 1;
    string requested_role = 2;
    string reason = 3;
}

message RoleRequestStatus {
    string request_id = 1;
    string status = 2;
}

message RoleRequestsList {
    message Entry {
        string request_id = 1;
        string id = 2; // user_id
        string requested_role = 3;
        string reason = 4;
        google.protobuf.Timestamp created_at = 5;
        string status = 6;
        optional string rejection_reason = 7;
        google.protobuf.Timestamp updated_at = 8;
    }
    repeated Entry requests = 1;
}

message ReviewRequest {
    string request_id = 1;
    bool approve = 2;
    optional string rejection_reason = 3;
}

message CancelRoleRequestRequest {
    string request_id = 1;
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message UploadProfilePictureRequest {
    string id = 1;
    bytes image_data = 2;
    string extension = 3;
}

message Presence {
    string id = 1;
    bool is_online = 2;
    google.protobuf.Timestamp last_seen_at = 3;
}

message FriendTargetRequest {
    string target_id = 1;
}

message Friendship {
    string user_id = 1;
    string friend_id = 2;
    string status = 3;
    optional string profile_picture_url = 4;
    bool is_online = 5;
    optional google.protobuf.Timestamp last_seen_at = 6;
    google.protobuf.Timestamp created_at = 7;
    optional google.protobuf.Timestamp accepted_at = 8;
    string requester_id = 9;
    string addressee_id = 10;
}

message FriendList {
    repeated Friendship friends = 1;
}
